project('SPIRV-Headers', 'c',
    version : '1.3.283.0',
)

spirv_headers_dep = declare_dependency(
    include_directories : include_directories('include')
)

spirv_include_path = join_paths(meson.current_source_dir(), 'include')

file_spir_v_xml = files('include/spirv/spir-v.xml')
file_unified1_extinst_debuginfo_grammar_json = files('include/spirv/unified1/extinst.debuginfo.grammar.json')
file_unified1_extinst_glsl_std_450_grammar_json = files('include/spirv/unified1/extinst.glsl.std.450.grammar.json')
file_unified1_extinst_nonsemantic_clspvreflection_grammar_json = files('include/spirv/unified1/extinst.nonsemantic.clspvreflection.grammar.json')
file_unified1_extinst_nonsemantic_debugbreak_grammar_json = files('include/spirv/unified1/extinst.nonsemantic.debugbreak.grammar.json')
file_unified1_extinst_nonsemantic_debugprintf_grammar_json = files('include/spirv/unified1/extinst.nonsemantic.debugprintf.grammar.json')
file_unified1_extinst_nonsemantic_shader_debuginfo_100_grammar_json = files('include/spirv/unified1/extinst.nonsemantic.shader.debuginfo.100.grammar.json')
file_unified1_extinst_nonsemantic_vkspreflection_grammar_json = files('include/spirv/unified1/extinst.nonsemantic.vkspreflection.grammar.json')
file_unified1_extinst_opencl_debuginfo_100_grammar_json = files('include/spirv/unified1/extinst.opencl.debuginfo.100.grammar.json')
file_unified1_extinst_opencl_std_100_grammar_json = files('include/spirv/unified1/extinst.opencl.std.100.grammar.json')
file_unified1_extinst_spv_amd_gcn_shader_grammar_json = files('include/spirv/unified1/extinst.spv-amd-gcn-shader.grammar.json')
file_unified1_extinst_spv_amd_shader_ballot_grammar_json = files('include/spirv/unified1/extinst.spv-amd-shader-ballot.grammar.json')
file_unified1_extinst_spv_amd_shader_explicit_vertex_parameter_grammar_json = files('include/spirv/unified1/extinst.spv-amd-shader-explicit-vertex-parameter.grammar.json')
file_unified1_extinst_spv_amd_shader_trinary_minmax_grammar_json = files('include/spirv/unified1/extinst.spv-amd-shader-trinary-minmax.grammar.json')
file_unified1_spirv_core_grammar_json = files('include/spirv/unified1/spirv.core.grammar.json')
file_unified1_spirv_json = files('include/spirv/unified1/spirv.json')
